Corrected name of styles file, backface visibility: hiddent to the back side of cards

--- a/css.css
+++ b/css.css
@@ -64,8 +64,9 @@ body::after {
     font-size: 0.8rem;
     background-color: antiquewhite;
     transform: rotateY(180deg);
+    backface-visibility: hidden;
 }
-
+    
 .card:hover {
     transform: rotateY(180deg);
 }
